active page is highlighted

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,13 @@ a.nav__logo img {
   color: var(--first-color);
 }
 
+.nav__menu .active {
+    color: white;
+    background: var(--first-color);
+    padding: 40px 20px 35px 20px;
+    border-radius: 0 0 30px 30px;
+}
+
 /* Navigation for mobile devices */
 @media screen and (max-width: 1023px) {
   .nav__menu {
@@ -352,7 +359,7 @@ a.nav__logo img {
 
 /*=============== main ===============*/
 section {
-    background: linear-gradient(90deg, transparent 75%, gray 25%);
+    background: linear-gradient(90deg, transparent 70%, rgb(200, 200, 200) 30%);
 }
 
 div.main {
@@ -385,11 +392,12 @@ div.main {
     background: linear-gradient(to right, var(--first-color) 50%, transparent 50%);
     background-size: 200% 100%;
     background-position: right bottom;
-    transition: all 0.5s ease-out;
+    transition: all 0.3s ease-out;
 }
 
 .main__left button:hover {
     background-position: left bottom;
+    color: white;
     cursor: pointer;
 }
 
